# smallest-llm

./: .gitignore  CLAUDE.md  README.md  checkpoints.db  eval.db  findings.md  goal.md  main.py  pyproject.toml  smallest_llm.db  smallest_llm.db-shm  smallest_llm.db-wal
configs/: example.json  tiny_stories.json
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx
eval_results/: baselines.json
eval_results/qwen2.5-0.5b/: results.json
eval_results/smollm-135m/: results.json
experiments/: shared_state.py
findings/: gradient_coherent_batching.md  gradient_interference.md  gradient_structure.md  layer_reconstruction.md  multi_token_prediction.md  token_selection_strategies.md
findings/scripts/: gradient_coherent_batching.py  gradient_interference.py  gradient_structure.py  multi_token_prediction.py
papers/: smollm.md  smollm3.md
plans/: 100x-radical.md  speed-ambitious.md
scripts/: ablation.py  ablation_results.json  attention_proof.py  download_datasets.py  eval_baselines.py  eval_harness.py  eval_suite.py  rate_infra.py  rate_model.py  serve.py
src/config/: base.py  presets.py
src/data/: byte_tokenizer.py  chat.py  datasets.py  streaming.py  text.py  tokenizer.py
src/evaluation/: __init__.py  checkpoint_model.py  config.py  evaluator.py  exported_model.py  hf_model.py  lm_harness_adapter.py  lm_harness_results.py  protocol.py  (+3 more)
tests/: test_activation_stats.py  test_checkpoints.py  test_data.py  test_layer_stats.py  test_run_manager.py  test_server.py  test_storage.py  test_training.py  test_utils.py
(+185 files in other folders)
