[project]
name = "smallest-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=7.2.2",
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=2.14.0",
    "lm-eval>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.4.2",
]
